--- a/nonitro.css
+++ b/nonitro.css
@@ -118,7 +118,7 @@ button.button__581d0.lookFilled__950dd.colorBrand__27d57.sizeMedium__60c12.grow_
     display: none;
 }
 
-/* might as well cause who tf clicks on this shit anyway lmaoooo (remove hypesquad) */
+/* might as well cause who tf clicks on this shit anyway lmaoooo (remove hypesquad from settings) */
 div.side_b4b3f6 div:nth-child(45) {
     display: none;
 }
